--- a/index.html
+++ b/index.html
@@ -30,12 +30,19 @@
   </aside>
   <main>
     <div class="hero">
-      <h1>The Queer Discount</h1>
-      <canvas id="c" data-gradient="wrapper" data-multx="2" data-multy="2" data-hue="180" data-brightness=".66"
+      <canvas fill id="c" data-gradient="wrapper" data-multx="2" data-multy="2" data-hue="180" data-brightness=".66"
         data-mouse="-1" data-scale="1" data-scale2="3" data-noise="1.5" data-time=".2" data-bw=".0" data-bw2=".25"
         data-red="0.83" data-green="0.01" data-blue="0.43" data-red2="0" data-green2="0.22" data-blue2="0.66"
         data-callback="true">
       </canvas>
+      <h1>The Queer Discount
+      </h1>
+      <svg fill-rule="evenodd" viewBox="0 0 10 1">
+        <path class="stroke-1" d="M 0 0.5 C 2.5 2     7.5 -1      10 0.5 L 10 1 L 0 1 L 0 0.5" />
+        <path class="stroke-2" d="M 0 0.5 C 2.5 1.75  7.5 -0.75   10 0.5 L 10 1 L 0 1 L 0 0.5" opacity="0.8" />
+        <path class="stroke-3" d="M 0 0.5 C 2.5 1.5   7.5 -0.5    10 0.5 L 10 1 L 0 1 L 0 0.5" opacity="0.5" />
+        <path class="stroke-4" d="M 0 0.5 C 2.5 1.25   7.5 -0.25   10 0.5 L 10 1 L 0 1 L 0 0.5" opacity="1" />
+      </svg>
     </div>
     <div class="content">
       <h2>What is the queer discount?</h2>
