--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
       </canvas>
       <h1>The Queer Discount
       </h1>
-      <svg fill-rule="evenodd" viewBox="0 0 10 1">
-        <path class="stroke-1" d="M 0 0.5 C 2.5 2     7.5 -1      10 0.5 L 10 1 L 0 1 L 0 0.5" />
-        <path class="stroke-2" d="M 0 0.5 C 2.5 1.75  7.5 -0.75   10 0.5 L 10 1 L 0 1 L 0 0.5" opacity="0.8" />
-        <path class="stroke-3" d="M 0 0.5 C 2.5 1.5   7.5 -0.5    10 0.5 L 10 1 L 0 1 L 0 0.5" opacity="0.5" />
-        <path class="stroke-4" d="M 0 0.5 C 2.5 1.25   7.5 -0.25   10 0.5 L 10 1 L 0 1 L 0 0.5" opacity="1" />
+      <svg preserveAspectRatio="none" viewBox="0 0 10 1">
+        <path class="stroke-1" d="M 0 0.125 C 2.5 2     7.5 -1       10 0.5 L 10 0.9 L 0 0.9 L 0 0.5" />
+        <path class="stroke-2" d="M 0 0.25 C 2.5 1.75  7.5 -0.75    10 0.5 L 10 0.9 L 0 0.9 L 0 0.5" opacity="0.8" />
+        <path class="stroke-3" d="M 0 0.375 C 2.5 1.5   7.5 -0.5     10 0.5 L 10 0.9 L 0 0.9 L 0 0.5" opacity="0.5" />
+        <path class="stroke-4" d="M 0 0.5 C 2.5 1.5   7.5 -0.25   10 0.6 L 10 1.1 L 0 1.1 L 0 0.5" opacity="1" />
       </svg>
     </div>
     <div class="content">
