--- a/index.html
+++ b/index.html
@@ -9,7 +9,22 @@
   </head>
 
   <body>
-    <main></main>
+    <main>
+      <audio id="audio" src="src/assets/audio.ogg"></audio>
+      <canvas id="canvas"></canvas>
+      <h1>Medusa</h1>
+    
+      <!-- <img src="assets/medusa.jpg" alt="medusa"> -->
+      <img id="border" src="src/assets/border.png" alt="border">
+      <div id="container">
+        <img class="color-burn" id="hair" src="src/assets/hair.png" alt="hair">
+      </div>
+      <img id="outline" src="src/assets/outline.png" alt="outline">
+      <img class="color-burn" id="dress" src="src/assets/skirt.png" alt="dress">
+      <img class="color-burn" id="shirt" src="src/assets/shirt.png" alt="shirt">
+      <img id="arm" src="src/assets/arm.png" alt="arm">
+      <img id="face" src="src/assets/face.png" alt="face">
+    </main>
     <canvas
       id="c"
       data-gradient="wrapper"
