try to update animatiion

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
   </aside>
   <main>
     <div class="hero">
+      <div class="sun"><span class="road"></span></div>
       <h1>The Queer Discount
       </h1>
       <svg preserveAspectRatio="none" viewBox="0 0 10 1">
