add vaporwave background

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="https://unpkg.com/open-props/masks.edges.min.css" />
 </head>
 
-<body data-theme="minimal">
+<body data-theme="retro">
   <aside>
     <nav>
       <ul class="links">
