update default checked theme

--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
   <fieldset id="theme-toggle" data-theme="minimal">
     <legend>Select active theme</legend>
     <div>
-    <input type="radio" name="theme" id="minimal" value="minimal" checked />
+    <input type="radio" name="theme" id="minimal" value="minimal" />
       <label for="minimal">Minimal</label>
     </div>
     <div>
-      <input type="radio" name="theme" id="retro" value="retro" />
+      <input type="radio" name="theme" id="retro" value="retro" checked />
       <label for="retro">Retro</label>
     </div>
   </fieldset>
