remove unused stuff

--- a/src/index.html
+++ b/src/index.html
@@ -5,10 +5,8 @@
 <head>
   <meta charset="utf-8" />
   <title>Andy Crawford Art</title>
-  <link rel="stylesheet" href="src/styles/main.css" />
-  <link rel="stylesheet" href="src/styles/project.css" />
-  <link rel="stylesheet" href="https://unpkg.com/open-props" />
-  <link rel="stylesheet" href="https://unpkg.com/open-props/masks.edges.min.css" />
+  <link rel="stylesheet" href="styles/main.css" />
+  <link rel="stylesheet" href="styles/project.css" />
 </head>
 
 <body data-theme="retro">
